Trabalho do estagiario!

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
 				<li>Moveis de latinhas de alumínio</li>
 				<li>Móveis de papelão</li>
 			<ul>
+			<p>Moveis baratos pra c*&%$#@!</p>
 	</body>
 </html>
